CKA-CKS-CKAD/canary/current-krill-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: current-krill-deployment
  name: current-krill-deployment
  namespace: goshawk
spec:
  replicas: 5
  selector:
    matchLabels:
      app: current-krill-deployment
      version: v1.0.0
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: current-krill-deployment
        version: v1.0.0
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
        resources: {}
status: {}
