CKA-CKS-CKAD/canary/nginx-canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp-primary
  name: myapp-canary
  namespace: newcanary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-primary
      tier: frontend
      track: canary
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp-primary
        tier: frontend
        track: canary
    spec:
      containers:
      - image: deekshithsn/k8s-deployment-strategies
        name: canary-demo
        ports:
        - containerPort: 80
        resources: {}
status: {}
