CKA-CKS-CKAD/canary/old-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: old-httpd
  name: old-httpd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: old-httpd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: old-httpd
    spec:
      containers:
      - image: httpd
        name: httpd
        resources: {}
status: {}
