CKA-CKS-CKAD/canary/canary-main-deployment-test.yaml
apiVersion: v1
kind: Service
metadata:
  #  labels:
  #  app: canary-test-svc
  name: canary-test-svc
  namespace: newcanary
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary-test
  type: NodePort
