CKA-CKS-CKAD/canary/canary-test.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: canary-test
  name: canary-test
  namespace: newcanary
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: canary-test
  type: ClusterIP
status:
  loadBalancer: {}
