CKA-CKS-CKAD/canary/current-krill-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
  namespace: goshawk
  labels:
    app: current-krill-deployment
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: current-krill-deployment
