CKA-CKS-CKAD/canary/newcanary_service1.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-canary
  name: nginx-canary
  namespace: newcanary
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-canary
  type: NodePort
status:
  loadBalancer: {}
