CKA-CKS-CKAD/canary/svc-canary1-canary2.yaml
apiVersion: v1
kind: Service
metadata:
 name: myapp-service
 namespace: canary
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
